wip: try to fix failed
- Your workflow file was invalid: .github/workflows/main.yml (Line: 21, Col: 7): Unexpected value 'run'

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     needs: install_evm
     name: Build
     steps:
-    - uses: "make"
+    - name: make
       env:
         EVM_EMACS: emacs-24.1-travis
       run: |
