--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,19 @@
 name: CI
 
 # Trigger the workflow on push or pull request
-on: [push, pull_request]
+on: [push]
 
 jobs:
-  install_evm:
-    name: Install Evm
-    runs-on: ubuntu-latest
-    steps:
-    - name: Install evm
-      run: curl -fsSkL https://raw.github.com/rejeep/evm/master/go | bash
-    
   build:
-    needs: install_evm
-    runs-on: ubuntu-latest
-    name: Build
+    runs-on: ubuntu-16.04
+    strategy:
+      matrix:
+        emacs: ['emacs-24.1-travis', 'emacs-25.1-travis', 'emacs-26.2-travis']
+    name: Emacs ${{ matrix.emacs }} sample
     steps:
-    - name: fetch
-      uses: actions/checkout@v1
-    - name: make
-      env:
-        EVM_EMACS: emacs-24.1-travis
-        PATH: "/home/runner/.evm/bin:$PATH"
-      run: |
-        make 
+      - uses: actions/checkout@master
+      - name: Setup Emacs
+        uses: emacs-php/github-actions-evm@master
+        with:
+          version: ${{ matrix.emacs }}
+      - run: emacs --version
