wip: ok i give up
try to build my own github action with emacs support

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Setup Emacs
-      uses: emacs-php/github-actions-evm@master
+      uses: coldnew/setup-emacs@master
       with:
         version: ${{ matrix.emacs }}
     - name: Emacs version
