--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,36 @@
-language: ruby
+#
+# Use nix-emacs-ci for travis CI
+# URL: https://github.com/purcell/nix-emacs-ci
+#
 
-cache:
-  directories:
-    - $HOME/.evm
+language: nix
+
+os:
+  - linux
+  - osx
 
 before_install:
-  - (cd $HOME/.evm && git pull) || git clone https://github.com/rejeep/evm.git $HOME/.evm
-  - export PATH=$HOME/.evm/bin:$PATH
-  - evm config path /tmp
-  - evm install $EVM_EMACS --use --skip
   - export PATH="$HOME/.cask/bin:$PATH"
   - curl -fsSkL https://raw.github.com/cask/cask/master/go | python
 
 env:
-  - EVM_EMACS=emacs-24.1-travis
-  - EVM_EMACS=emacs-24.2-travis
-  - EVM_EMACS=emacs-24.3-travis
-  - EVM_EMACS=emacs-24.4-travis
-  - EVM_EMACS=emacs-24.5-travis
-  - EVM_EMACS=emacs-25.1-travis
-  - EVM_EMACS=emacs-25.2-travis
-  - EVM_EMACS=emacs-25.3-travis
-  - EVM_EMACS=emacs-26.1-travis
-  - EVM_EMACS=emacs-26.2-travis
-  - EVM_EMACS=emacs-git-snapshot-travis
-  - EVM_EMACS=remacs-git-snapshot-travis
+  - EMACS_CI=emacs-24-4
+  - EMACS_CI=emacs-24-5
+  - EMACS_CI=emacs-25-1
+  - EMACS_CI=emacs-25-2
+  - EMACS_CI=emacs-25-3
+  - EMACS_CI=emacs-26-1
+  - EMACS_CI=emacs-26-2
+  - EMACS_CI=emacs-26-3
+  - EMACS_CI=emacs-snapshot
 
 matrix:
   allow_failures:
-    - env: EVM_EMACS=emacs-git-snapshot-travis
-    - env: EVM_EMACS=remacs-git-snapshot-travis
+    - env: EMACS_CI=emacs-snapshot
+
+install:
+  # The default "emacs" executable on the $PATH will now be the version named by $EMACS_CI
+  - bash <(curl https://raw.githubusercontent.com/purcell/nix-emacs-ci/master/travis-install)
 
 script:
   - emacs --version
