travis: ignore emacs-24-2 and emacs-24-3 failure
emacs-24-2 and emacs-24-3 build failed on travis-ci, we should fix it later.

Signed-off-by: Yen-Chin Lee <coldnew.tw@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,12 @@ env:
   - EMACS_CI=emacs-26-3
   - EMACS_CI=emacs-snapshot
 
+# emacs-24-2 and emacs-24-3 may failure on test
+# just ignore it now.
 matrix:
   allow_failures:
+    - env: EMACS_CI=emacs-24-2
+    - env: EMACS_CI=emacs-24-3
     - env: EMACS_CI=emacs-snapshot
 
 # The default "emacs" executable on the $PATH will now be the version named by $EMACS_CI
